--- a/front/web/admin.html
+++ b/front/web/admin.html
@@ -287,7 +287,7 @@
     <p>&copy; 2025 PetShop. Todos os direitos reservados. Desenvolvido com ❤️ para pets.</p>
   </div>
 </footer>
-
+  <script src="api.js"></script>
   <script src="./js/admin.js"></script>
 </body>
 </html>
