--- a/front/web/admin.html
+++ b/front/web/admin.html
@@ -266,9 +266,9 @@
     <!-- Seção Contato -->
     <div class="footer-section">
       <h3>Contato</h3>
-      <p><i class="fas fa-map-marker-alt"></i> Rua das Flores, 123 - Centro, São Paulo - SP</p>
-      <p><i class="fas fa-phone"></i> (11) 99999-9999</p>
-      <p><i class="fas fa-envelope"></i> contato@petshop.com.br</p>
+       <p><i class="fas fa-map-marker-alt"></i> Rua das Flores, 123 - Centro, Jaguariúna - SP</p>
+      <p><i class="fas fa-phone"></i> (11) 93499-3499</p>
+      <p><i class="fas fa-envelope"></i> petgato@gmail.com</p>
       <p><i class="fas fa-clock"></i> Seg-Sex: 9h às 18h | Sáb: 9h às 14h</p>
     </div>
 
