--- a/front/web/doacoes.html
+++ b/front/web/doacoes.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <h1>Pet Gatô🐶🐱</h1>
+    <h1>Pet Gatô</h1>
     <nav>
       <a href="/front/web/index.html">Início</a>
       <a href="./consulta.html" class="ativo">Consulta</a>
