--- a/front/web/produtos.html
+++ b/front/web/produtos.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
+    <h1>Pet Gatô</h1>
     <button onclick="window.location.href='admin.html'">
         Voltar para a tela inicial admin
     </button>
