--- a/front/web/senhaadmin.html
+++ b/front/web/senhaadmin.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pet Gatô</title>
+  <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <link rel="stylesheet" href="./css/senhaadmin.css">
 </head>
 <body>
