--- a/front/web/adocao/cachorro.html
+++ b/front/web/adocao/cachorro.html
@@ -1,120 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../css/animais.css">
-  <title>Adoção</title>
+  <title>Cachorros</title>
+  <link rel="stylesheet" href="../css/cachorro.css">
 </head>
-
-  <header>
-        <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1>
-      </header>
-    
 <body>
-  <nav>
-    <br>
-    <br>
-    <br>
-    <h2>Nosso catálogo de adoção</h2>
-    <br>
-    <br>
-    <div class="back-button">
-      <h3>Se interessou por algum bichinho?</h3>  <button onclick="abrirModal()" type="button">Adotar</button>
-      <a href="../adocao.html"><button>Voltar</button></a>
-    </div>
-  </nav>
+  <header>
+    <h1>Cachorros</h1>
+    <nav>
+      <a href="../index.html">Início</a>
+      <a href="../login.html">
+        <img src="../docs/pessoa.png" alt="Login" class="icon">
+      </a>
+    </nav>
+  </header>
 
-  <br>
+  <main class="container">
+    <h2 class="titulo">Nosso catálogo de adoção</h2>
 
-  <div class="product-list">
-
-    <div class="product-item">
-      <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/07/759717358-pug.jpg" alt="Pug">
-      <h3>Thalia</h3>
-      <p>Peso:500g</p>
+    <div class="card">
+      <img src="https://p2.trrsf.com/image/fget/cf/774/0/images.terra.com/2024/03/07/759717358-pug.jpg" alt="Thalia" class="imagem">
+      <h3 class="nome">Thalia</h3>
+      <p>Peso: 500g</p>
       <p>Idade: 60 Dias</p>
-      <p>Raça:Pug</p>
+      <p>Raça: Pug</p>
+      <div class="botoesContainer">
+        <a class="botao" href="https://wa.me/19995601381?text=Olá! Quero adotar este pet 🐶%0ANome: Thalia%0ARaça: Pug%0AIdade: 60 Dias%0APeso: 500g">Adotar</a>
+        <a class="botao botaoVoltar" href="../adocao.html">Voltar</a>
+      </div>
     </div>
 
-    <div class="product-item">
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwibKuMFrdaNbPlY3Pm2yKbBFnKCvvCd2jmiKy3BupUeKNI-FU122Suh0y10lP6Lkv1Nc&usqp=CAU"
-        alt="Dalmata">
-      <h3>Athena</h3>
-      <p>Peso:25kg</p>
-      <p>Idade 2 Anos</p>
-      <p>Raça:Dalmata</p>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRwibKuMFrdaNbPlY3Pm2yKbBFnKCvvCd2jmiKy3BupUeKNI-FU122Suh0y10lP6Lkv1Nc&usqp=CAU" alt="Athena" class="imagem">
+      <h3 class="nome">Athena</h3>
+      <p>Peso: 25kg</p>
+      <p>Idade: 2 Anos</p>
+      <p>Raça: Dálmata</p>
+      <div class="botoesContainer">
+        <a class="botao" href="https://wa.me/19995601381?text=Olá! Quero adotar este pet 🐶%0ANome: Athena%0ARaça: Dálmata%0AIdade: 2 Anos%0APeso: 25kg">Adotar</a>
+        <a class="botao botaoVoltar" href="../adocao.html">Voltar</a>
+      </div>
     </div>
 
-    <div class="product-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGpIWchB2XUi584Uo7sRMNq_mU2p20u7JEHA&s" alt="srd">
-      <h3>Caramelo </h3>
+    <div class="card">
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGpIWchB2XUi584Uo7sRMNq_mU2p20u7JEHA&s" alt="Caramelo" class="imagem">
+      <h3 class="nome">Caramelo</h3>
       <p>Peso: 7kg</p>
-      <p>Idade 5 Anos</p>
-      <p>Raça:SRD</p>
+      <p>Idade: 5 Anos</p>
+      <p>Raça: SRD</p>
+      <div class="botoesContainer">
+        <a class="botao" href="https://wa.me/19995601381?text=Olá! Quero adotar este pet 🐶%0ANome: Caramelo%0ARaça: SRD%0AIdade: 5 Anos%0APeso: 7kg">Adotar</a>
+        <a class="botao botaoVoltar" href="../adocao.html">Voltar</a>
+      </div>
     </div>
 
-    <div class="product-item">
-      <img
-        src="https://media.istockphoto.com/id/1285465107/pt/foto/loyal-golden-retriever-dog-sitting-on-a-green-backyard-lawn-looks-at-camera-top-quality-dog.jpg?s=612x612&w=0&k=20&c=nTG4sxYJWfQdoaPTYmt5Vcq9cyixwmMyGzU1w-9l6Ls="
-        alt="SRD">
-      <h3>Max</h3>
+    <div class="card">
+      <img src="https://media.istockphoto.com/id/1285465107/pt/foto/loyal-golden-retriever-dog-sitting-on-a-green-backyard-lawn-looks-at-camera-top-quality-dog.jpg?s=612x612&w=0&k=20&c=nTG4sxYJWfQdoaPTYmt5Vcq9cyixwmMyGzU1w-9l6Ls=" alt="Max" class="imagem">
+      <h3 class="nome">Max</h3>
       <p>Peso: 8kg</p>
-      <p>Idade 10 Anos</p>
-      <p>Raça:SRD</p>
+      <p>Idade: 10 Anos</p>
+      <p>Raça: SRD</p>
+      <div class="botoesContainer">
+        <a class="botao" href="https://wa.me/19995601381?text=Olá! Quero adotar este pet 🐶%0ANome: Max%0ARaça: SRD%0AIdade: 10 Anos%0APeso: 8kg">Adotar</a>
+        <a class="botao botaoVoltar" href="../adocao.html">Voltar</a>
+      </div>
     </div>
-
-    <div class="product-item">
-      <img
-        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRlc4Xj5BqVURzB-qs69QBNaxqpv8GtRqla4g&s"
-        alt="SRD">
-      <h3>Lilica</h3>
-      <p>Peso:25kg</p>
-      <p>Idade 2 Anos</p>
-      <p>Raça:srd</p>
-    </div>
-
-    <div class="product-item">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSr5kAwEovnzqL-C0CCpg0ZVOe2_prtCpbfg&s">
-      <h3>Rubens</h3>
-      <p>Peso: 13kg</p>
-      <p>Idade 5 Anos</p>
-      <p>Raça:SRD</p>
-    </div>
-
-    <div class="product-item">
-      <img
-        src="https://adotar.com.br/upload/2024-03/animais_imagem1099156.jpg?w=300&format=webp"
-        alt="SRD">
-      <h3>Fred</h3>
-      <p>Peso: 10kg</p>
-      <p>Idade 13 Anos</p>
-      <p>Raça:SRD</p>
-    </div>
-
-    <div class="product-item">
-      <img
-        src="https://adotar.com.br/upload/2023-02/animais_imagem951404.jpg?w=300&format=webp"
-        alt="SRD">
-      <h3>Pipoca</h3>
-      <p>Peso: 10kg</p>
-      <p>Idade 5 Anos</p>
-      <p>Raça:SRD</p>
-    </div>
-  </div>
-  <br>
-  <br>
-
-   <div id="meuModal" class="modal">
-    <div class="modal-content">
-      <span class="close" onclick="fecharModal()">&times;</span>
-      <h2>Quer adotar?</h2>
-      <p>Para adotar esse pet ou saber mais sobre ele, entre em contato com o protetor:</p>
-      <p><strong>Email:</strong> petgato@gmail.com</p>
-      <p><strong>Telefone:</strong> (19) 1231-3123</p>
-    </div>
-  </div>
+  </main>
 </body>
 </html>
