atualizações finais da adoção

--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -14,7 +14,7 @@
     <div class="header-buttons">
       <a href="./index.html" class="header-button">Início</a>
       <a href="./login.html" class="header-button">
-        <img src="../docs/pessoa.png" alt="Perfil" class="profile-image">
+        <img src="./docs/pessoa.png" alt="Perfil" class="profile-image">
       </a>
     </div>
   </header>
