--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -10,7 +10,7 @@
 <body>
 
   <header class="header">
-    <h1 class="title">𝓐𝓭𝓸𝓬̧𝓪̃𝓸</h1>
+    <h1 class="title">Adoção</h1>
     <div class="header-buttons">
       <a href="./index.html" class="header-button">Início</a>
       <a href="./login.html" class="header-button">
