--- a/front/web/produtoscli.html
+++ b/front/web/produtoscli.html
@@ -12,6 +12,7 @@
     <button onclick="window.location.href='index.html'">
       Voltar para a tela inicial
     </button>
+    <button onclick="window.location.href='carrinho.html'">🛒 Ir para o carrinho</button>
     <div class="filter-container">
       <select id="categoriaFilter">
         <option value="todos">Todos os Produtos</option>
