--- a/front/web/doacoes.html
+++ b/front/web/doacoes.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Pet Gatô</h1>
     <nav>
-      <a href="/front/web/index.html">Início</a>
+      <a href="./index.html">Início</a>
       <a href="./consulta.html" class="ativo">Consulta</a>
       <a href="./adocao.html">Adoções</a>
     </nav>
