--- a/front/web/carrinho.html
+++ b/front/web/carrinho.html
@@ -19,10 +19,10 @@
       <div id="listaCarrinho"></div>
       <p>Total: R$ <span id="total">0.00</span></p>
 
-      <div class="banner">Cupom de presente: desconto5 </div>
+      <div class="banner">Cupom de presente: desconto5  </div>
 
-      <input type="text" id="cupom" placeholder="Cupom de desconto">
-      <button id="aplicarCupom">Alipcar 5%</button>
+      <input type="text" id="cupom" placeholder="Cole o cupom aqui">
+      <button id="aplicarCupom">Aplicar 5%</button>
 
       <h3>Informações de Entrega</h3>
 <form id="formEntrega">
