--- a/front/web/doacoesadmin.html
+++ b/front/web/doacoesadmin.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Pet Gatô 🐶🐱</h1>
     <nav>
-      <a href="/front/web/admin.html">Início</a>
+      <a href="./admin.html">Início</a>
       <a href="./consultaadmin.html" class="ativo">Consulta</a>
       <a href="./adocaoadmin.html">Adoções</a>
     </nav>
