--- a/front/web/doacoesadmin.html
+++ b/front/web/doacoesadmin.html
@@ -13,7 +13,7 @@
     <nav>
       <a href="./admin.html">Início</a>
       <a href="./consultaadmin.html" class="ativo">Consulta</a>
-      <a href="./adocaoadmin.html">Adoções</a>
+      <a href="./adocao.html">Adoções</a>
     </nav>
   </header>
 
