--- a/front/web/logado.html
+++ b/front/web/logado.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/logado.css" />
   <link rel="icon" href="../web/images/icon.jpg" type="image/x-icon" />
   <title>Pet Gatô: o melhor petshop online, em todos os aspectos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -11,7 +11,7 @@
 <body>
   <!-- Cabeçalho -->
   <header>
-    <h1>Pet Gatô</h1>
+    <h1>Pet Gatô, Você esta logado!</h1>
     <li class="search-icon"></li>
     <button onclick="window.location.href='carrinho.html'">
       <img src="./docs/sacola.png" alt="Carrinho" />
@@ -22,6 +22,13 @@
   </header>
 
   <!-- Segundo cabeçalho -->
+  <div class="Containerheader">
+    <button onclick="window.location.href='consulta.html'">
+      <img src="./docs/veterinario.gif" alt="Consulta" width="40" height="40" />Consulta
+    </button>
+    <button onclick="window.location.href='adocao.html'">
+      <img src="./docs/salve-os-animais.gif" alt="Adoção" width="40" height="40" />Adoção
+    </button>
     <button onclick="window.location.href='doacoes.html'">
       <img src="./docs/doacao.gif" alt="Doações" width="40" height="40" />Doações
     </button>
