--- a/front/web/index.html
+++ b/front/web/index.html
@@ -20,7 +20,7 @@
       <img src="./docs/pessoa.png" alt="Login" />
     </button>
   </header>
-
+  <div class="Containerheader">
     <button onclick="window.location.href='doacoes.html'">
       <img src="./docs/doacao.gif" alt="Doações" width="40" height="40" />Doações
     </button>
