--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -12,7 +12,7 @@
   <header class="header">
     <h1 class="title">Adoção</h1>
     <div class="header-buttons">
-      <a href="./index.html" class="header-button">Início</a>
+      <a href="./logado.html" class="header-button">Início</a>
       <a href="./login.html" class="header-button">
         <img src="./docs/pessoa.png" alt="Perfil" class="profile-image">
       </a>
