--- a/front/web/adocao/gato.html
+++ b/front/web/adocao/gato.html
@@ -10,7 +10,7 @@
   <header>
     <h1>Gatos</h1>
     <nav>
-      <a href="../index.html">Início</a>
+      <a href="../logado.html">Início</a>
       <a href="../login.html">
         <img src="../docs/pessoa.png" alt="Login" class="icon">
       </a>
