--- a/front/web/carrinho.html
+++ b/front/web/carrinho.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <h1>Carrinho de Compras</h1>
-        <button onclick="window.location.href='index.html'">Voltar</button>
+        <button onclick="window.location.href='logado.html'">Voltar</button>
     </header>
 
     <main>
