--- a/front/web/consulta.html
+++ b/front/web/consulta.html
@@ -48,7 +48,7 @@
             </form>
 
             <div class="back-button"> 
-                <a href="index.html"><button id="vol">Voltar</button></a> 
+                <a href="logado.html"><button id="vol">Voltar</button></a> 
             </div>
         </div>
     </div>
