Add button for navigating to blog1.html

--- a/front/web/index.html
+++ b/front/web/index.html
@@ -20,6 +20,8 @@
       <img src="./docs/pessoa.png" alt="Login" />
     </button>
   </header>
+
+   <div class="Containerheader">
     <button onclick="window.location.href='cadastrar.html'">
       <img src="./docs/noticias.gif" alt="Cadastrar" width="40" height="40" />Cadastrar
     </button>
