--- a/front/web/logado.html
+++ b/front/web/logado.html
@@ -176,10 +176,11 @@
         <h1><b style="font-size: 35px;"></b></h1>
       </div><br>
       <div class="animal">
-  <button onclick="window.location.href='produtosclilogado.html'">
+  <button onclick="window.location.href='produtoscli.html'">
     <img src="./docs/petshopdois.png"/>Produtos para seus pets
   </button>
 </div>  </section><br /><br /><br /><br />
+
   <br /><br /><br /><br /><br /><br />
 
   <div class="cb">
