--- a/front/web/adocao.html
+++ b/front/web/adocao.html
@@ -46,7 +46,7 @@
     </div>
 
     <div class="back-button-container">
-      <button class="back-button" onclick="window.location.href='./index.html'">Voltar</button>
+      <button class="back-button" onclick="window.location.href='./logado.html'">Voltar</button>
     </div>
   </main>
 
