Update cart button link to logged-in version

--- a/front/web/logado.html
+++ b/front/web/logado.html
@@ -16,7 +16,7 @@
     <button id="sair"  onclick="window.location.href='index.html'">
     <h4>Sair</h4>
     </button>
-    <button onclick="window.location.href='carrinho.html'">
+    <button onclick="window.location.href='carrinhologado.html'">
       <img src="./docs/sacola.png" alt="Carrinho" />
     </button>
   </header>
