--- a/front/web/logado.html
+++ b/front/web/logado.html
@@ -82,28 +82,28 @@
   </div>
 
   <div class="juros">
-    <button onclick="window.location.href='confira.html'">
+    <button onclick="window.location.href='confiralogado.html'">
       <img src="./docs/relogio.png" alt="Receba em algumas horas" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Receba em algumas horas!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='confira.html'">
+    <button onclick="window.location.href='confiralogado.html'">
       <img src="./docs/cartao.png" alt="Parcele em 3x sem juros" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Parcele em 3x sem juros!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='confira.html'">
+    <button onclick="window.location.href='confiralogado.html'">
       <img src="./docs/entrega-rapida.png" alt="Frete Grátis" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Frete Grátis!</b><br />
         Confira as regras ->
       </p>
     </button>
-    <button onclick="window.location.href='confira.html'">
+    <button onclick="window.location.href='confiralogado.html'">
       <img src="./docs/petshop.png" alt="Retire e troque seu pedido na loja" width="40" height="40" />
       <p style="color: rgb(112, 109, 109);">
         <b>Retire e troque seu pedido na loja!</b><br />
