--- a/front/web/confiralogado.html
+++ b/front/web/confiralogado.html
@@ -11,14 +11,11 @@
 </head>
 <body>
   <header>
-    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1><button onclick="window.location.href='index.html'">Inicio</button>
+    <h1>𝓟𝓮𝓽 𝓖𝓪𝓽𝓸</h1><button onclick="window.location.href='logado.html'">Inicio</button>
       
       <button onclick="window.location.href='carrinho.html'">
       <img src="./docs/sacola.png" alt="Carrinho" />
 
-    </button>
-      <button onclick="window.location.href='login.html'">
-      <img src="./docs/pessoa.png" alt="Login" />
     </button>
     </header><br><br><br><br>
      <br><div class="fundo">
