--- a/front/web/index.html
+++ b/front/web/index.html
@@ -34,29 +34,26 @@
   <br /><br /><br /><br /><br />
   <div class="anuncios">
     <br /><br />
-    <button onclick="window.location.href='doacoes.html'">
       <img src="./docs/doacao.gif" alt="Doação" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Brinquedos que fazem a diferença!</b><br />
         Doe e ajude a levar felicidade para quem mais precisa.<br />
-        <b style="color: rgb(75, 197, 235);">Doe agora -></b>
+        <b style="color: rgb(75, 197, 235);"></b>
       </p>
     </button>
-    <button onclick="window.location.href='consulta.html'">
       <img src="./docs/veterinario.gif" alt="Acupuntura" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Consulta para pets:</b><br />
         amor e saúde em cada ponto!<br />
-        <b style="color: rgb(75, 197, 235);">Agende Agora! -></b>
+        <b style="color: rgb(75, 197, 235);"></b>
       </p>
       <br />
     </button>
-    <button onclick="window.location.href='adocao.html'">
       <img src="./docs/salve-os-animais.gif" alt="Blog" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Amor e cuidado!</b><br />
         Faça a vida de um animalzinho feliz hoje, Adote um pet!<br />
-        <b style="color: rgb(75, 197, 235);">Adote Agora -></b>
+        <b style="color: rgb(75, 197, 235);"></b>
       </p>
     </button>
   </div>
