--- a/front/web/index.html
+++ b/front/web/index.html
@@ -33,6 +33,7 @@
 
   <br /><br /><br /><br /><br />
   <div class="anuncios">
+    <button>
     <br /><br />
       <img src="./docs/doacao.gif" alt="Doação" width="40" height="40" />
       <p style="color: black;">
@@ -41,6 +42,7 @@
         <b style="color: rgb(75, 197, 235);"></b>
       </p>
     </button>
+    <button>
       <img src="./docs/veterinario.gif" alt="Acupuntura" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Consulta para pets:</b><br />
@@ -49,6 +51,7 @@
       </p>
       <br />
     </button>
+    <button>
       <img src="./docs/salve-os-animais.gif" alt="Blog" width="40" height="40" />
       <p style="color: black;">
         <b style="color: rgb(75, 197, 235);">Amor e cuidado!</b><br />
