--- a/front/web/logado.html
+++ b/front/web/logado.html
@@ -14,7 +14,7 @@
     <h1>Pet Gatô, Você esta logado!</h1>
     <li class="search-icon"></li>
     <button id="sair"  onclick="window.location.href='index.html'">
-    <h4>Sair</h4>
+    <h4>Sair da conta</h4>
     </button>
     <button onclick="window.location.href='carrinhologado.html'">
       <img src="./docs/sacola.png" alt="Carrinho" />
