--- a/front/web/produtosclilogado.html
+++ b/front/web/produtosclilogado.html
@@ -12,7 +12,7 @@
     <button onclick="window.location.href='logado.html'">
       Voltar para a tela inicial
     </button>
-    <button onclick="window.location.href='carrinho.html'">🛒 Ir para o carrinho</button>
+    <button onclick="window.location.href='carrinhologado.html'">🛒 Ir para o carrinho</button>
     <div class="filter-container">
       <select id="categoriaFilter">
         <option value="todos">Todos os Produtos</option>
